fixed card spacing

--- a/wp-content/themes/danfleming/style.css
+++ b/wp-content/themes/danfleming/style.css
@@ -1237,6 +1237,8 @@ body {
  font-size: 60px;
  margin-top: 0;
  font-weight: 700;
+ max-width: 300px;
+ padding-bottom:65px;
 }
 
 .projectCard h3 {
